package com.nutrifit.backend.perfil.model;

/**
 * Sexo biológico del usuario, usado en el cálculo de TMB con Mifflin-St Jeor.
 */
public enum Sexo {
    H, M
}
